--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <form>
         <p>¿Cuál es el planeta más cercano al Sol en nuestro sistema solar?</p>
         <div>
-          <input type="radio" id="choice1" name="1" value="saturno" />
+          <input type="radio" id="choice1" name="1" value="saturno" onclick="alert('Saturno');"/>
           <label for="choice1">Saturno</label>
           <br>
           <input type="radio" id="choice2" name="1" value="mercurio"/>
@@ -25,7 +25,7 @@
         <br>
         <p>¿Cuál es el océano más grande del mundo?</p>
         <div>
-          <input type="radio" id="choice1" name="2" value="atlantico" />
+          <input type="radio" id="choice1" name="2" value="atlantico" onclick="alert('Atlántico');"/>
           <label for="choice1">Atlántico</label>
           <br>
           <input type="radio" id="choice2" name="2" value="indico" />
