--- a/src/index.html
+++ b/src/index.html
@@ -10,36 +10,36 @@
     <form>
         <p>¿Cuál es el planeta más cercano al Sol en nuestro sistema solar?</p>
         <div>
-          <input type="radio" id="choice1" name="1" value="saturno" onclick="alert('Saturno');"/>
+          <input type="radio" id="choice1" name="question1" value="saturno" />
           <label for="choice1">Saturno</label>
           <br>
-          <input type="radio" id="choice2" name="1" value="mercurio"/>
+          <input type="radio" id="choice2" name="question1" value="mercurio"/>
           <label for="choice2">Mercurio</label>
           <br>
-          <input type="radio" id="choice3" name="1" value="venus" />
+          <input type="radio" id="choice3" name="question1" value="venus" />
           <label for="choice3">Venus</label>
           <br>
-          <input type="radio" id="choice4" name="1" value="tierra"/>
+          <input type="radio" id="choice4" name="question1" value="tierra"/>
           <label for="choice4">Tierra</label>
         </div>
         <br>
         <p>¿Cuál es el océano más grande del mundo?</p>
         <div>
-          <input type="radio" id="choice1" name="2" value="atlantico" onclick="alert('Atlántico');"/>
+          <input type="radio" id="choice1" name="question2" value="atlantico" />
           <label for="choice1">Atlántico</label>
           <br>
-          <input type="radio" id="choice2" name="2" value="indico" />
+          <input type="radio" id="choice2" name="question2" value="indico" />
           <label for="choice2">Indico</label>
           <br>
-          <input type="radio" id="choice3" name="2" value="artico" />
+          <input type="radio" id="choice3" name="question2" value="artico" />
           <label for="choice3">Artico</label>
           <br>
-          <input type="radio" id="choice4" name="2" value="pacifico"/>
+          <input type="radio" id="choice4" name="question2" value="pacifico"/>
           <label for="choice4">Pacífico</label>
         </div>
         <br>
         <div>
-          <button type="submit">Verificar</button>
+          <button type="submit" onclick="greet();">Verificar</button>
         </div>
     </form>
     <script src="main.js"></script>
