fix: fixed the declaration of variables

--- a/src/ejercicio3.html
+++ b/src/ejercicio3.html
@@ -10,15 +10,15 @@
     //Ganancias y pérdidas: Crea un programa que pide los ingresos, los costos y el % de impuestos, y calcula la ganancia después de impuestos. Debe imprimir el resultado en la web con el símbolo $ adelante.
 
     // ask for the data
-    income = prompt('¿Cuál es el valor de sus ingresos totales?');
-    costs = prompt('¿Cuál es el valor de los costos?');
-    taxPercent = prompt('¿Cuál es el porcentaje de impuestos?');
+    let income = prompt('¿Cuál es el valor de sus ingresos totales?');
+    let costs = prompt('¿Cuál es el valor de los costos?');
+    let taxPercent = prompt('¿Cuál es el porcentaje de impuestos?');
 
 
     // do the operations to get the net income
-    grossIncome = income - costs ;
-    tax = (grossIncome/100)*taxPercent;
-    netIncome = grossIncome - tax;
+    let grossIncome = income - costs ;
+    let tax = (grossIncome/100)*taxPercent;
+    let netIncome = grossIncome - tax;
 
     // show net income
     document.write(`El ingreso neto es: $ ${netIncome}`);
