--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div id="intro">
       <p>Ingrese su nombre</p>
       <input id="name" type="text"/>
-      <button onclick="playGame()">Jugar</button>
+      <button id="playGameBtn">Jugar</button>
     </div>
     <div id="questions">
       <p id="welcomeMsg"></p>
@@ -47,9 +47,9 @@
         </div>
         <br>
         <div>
-          <button onclick="greet();">Verificar</button>
+          <button id="verifyAnswersBtn">Verificar</button>
         </div>
-        <button onclick="restart();">Reiniciar</button>
+        <button id="restartGameBtn">Reiniciar</button>
     </form>
     </div>
     <script src="main.js"></script>
