--- a/src/index.html
+++ b/src/index.html
@@ -21,46 +21,46 @@
       <div id="question1">
         <p>¿Cuál es el planeta más cercano al Sol en nuestro sistema solar?</p>
         <input type="radio" id="q1Choice1" name="question1" value="saturno" />
-        <label for="choice1">Saturno</label>
+        <label for="q1Choice1">Saturno</label>
         <br>
         <input type="radio" id="q1Choice2" name="question1" value="mercurio" />
-        <label for="choice2">Mercurio</label>
+        <label id="q1Choice2Txt" for="q1Choice2">Mercurio</label>
         <br>
         <input type="radio" id="q1Choice3" name="question1" value="venus" />
-        <label for="choice3">Venus</label>
+        <label for="q1Choice3">Venus</label>
         <br>
         <input type="radio" id="q1Choice4" name="question1" value="tierra" />
-        <label for="choice4">Tierra</label>
+        <label for="q1Choice4">Tierra</label>
         <br>
       </div>
       <div id="question2">
         <p>¿Cuál es el océano más grande del mundo?</p>
         <input type="radio" id="q2Choice1" name="question2" value="atlantico" />
-        <label for="choice1">Atlántico</label>
+        <label for="q2Choice1">Atlántico</label>
         <br>
         <input type="radio" id="q2Choice2" name="question2" value="indico" />
-        <label for="choice2">Indico</label>
+        <label for="q2Choice2">Indico</label>
         <br>
         <input type="radio" id="q2Choice3" name="question2" value="artico" />
-        <label for="choice3">Artico</label>
+        <label for="q2Choice3">Artico</label>
         <br>
         <input type="radio" id="q2Choice4" name="question2" value="pacifico" />
-        <label for="choice4">Pacífico</label>
+        <label for="q2Choice4">Pacífico</label>
         <br>
       </div>
       <div id="question3">
         <p>¿Cuál es la capital de Colombia</p>
         <input type="radio" id="q3Choice1" name="question3" value="Medellin" />
-        <label for="choice1">Medellín</label>
+        <label for="q3Choice1">Medellín</label>
         <br>
         <input type="radio" id="q3Choice2" name="question3" value="Cali" />
-        <label for="choice2">Cali</label>
+        <label for="q3Choice2">Cali</label>
         <br>
         <input type="radio" id="q3Choice3" name="question3" value="Bogota" />
-        <label for="choice3">Bogotá</label>
+        <label for="q3Choice3">Bogotá</label>
         <br>
         <input type="radio" id="q3Choice4" name="question3" value="Pereira" />
-        <label for="choice4">Pereira</label>
+        <label for="q3Choice4">Pereira</label>
         <br>
       </div>
       <div>
