feat: showing correct answers

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         <label for="q2Choice3">Artico</label>
         <br>
         <input type="radio" id="q2Choice4" name="question2" value="pacifico" />
-        <label for="q2Choice4">Pacífico</label>
+        <label id="q2Choice4Txt" for="q2Choice4">Pacífico</label>
         <br>
       </div>
       <div id="question3">
@@ -57,7 +57,7 @@
         <label for="q3Choice2">Cali</label>
         <br>
         <input type="radio" id="q3Choice3" name="question3" value="Bogota" />
-        <label for="q3Choice3">Bogotá</label>
+        <label id="q3Choice3Txt" for="q3Choice3">Bogotá</label>
         <br>
         <input type="radio" id="q3Choice4" name="question3" value="Pereira" />
         <label for="q3Choice4">Pereira</label>
