feat: added text showing the answers

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,7 @@
         <label for="q3Choice4">Pereira</label>
         <br>
       </div>
+      <div id="results"></div>
       <div>
         <button id="verifyAnswersBtn">Verificar</button>
       </div>
