feat: put other questions

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,11 @@
     <input id="name" type="text" />
     <button id="playGameBtn">Jugar</button>
   </div>
-  <div id="questions">
-    <p id="welcomeMsg"></p>
+  <div id="welcome">
+    <p id="welcomeMsg">
+    </p>
+  </div>
+  <div id="general">
     <form>
       <div id="question1">
         <p>¿Cuál es el planeta más cercano al Sol en nuestro sistema solar?</p>
@@ -61,6 +64,60 @@
         <br>
         <input type="radio" id="q3Choice4" name="question3" value="Pereira" />
         <label id="q3Choice4Txt"  for="q3Choice4">Pereira</label>
+        <br>
+      </div>
+      <div id="results"></div>
+      <div>
+        <button id="verifyAnswersBtn">Verificar</button>
+      </div>
+      <button id="restartGameBtn">Reiniciar</button>
+    </form>
+  </div>
+  <div id="movies">
+    <form>
+      <div id="question1.2">
+        <p>¿Cuál fue la primera directora en ganar un Oscar de la Academia?</p>
+        <input type="radio" id="q1.2Choice1" name="question1" value="Kathryn Bigelow" />
+        <label id="q1.2Choice1Txt" for="q1.2Choice1">Kathryn Bigelow</label>
+        <br>
+        <input type="radio" id="q1.2Choice2" name="question1" value="Sophia Coppola" />
+        <label id="q1.2Choice2Txt" for="q1.2Choice2">Sophia Coppola</label>
+        <br>
+        <input type="radio" id="q1.2Choice3" name="question1" value="Agnes Varda" />
+        <label id="q1.2Choice3Txt" for="q1.2Choice3">Agnes Varda</label>
+        <br>
+        <input type="radio" id="q1.2Choice4" name="question1" value="Emerald Fennell" />
+        <label id="q1.2Choice4Txt" for="q1.2Choice4">Emerald Fennell</label>
+        <br>
+      </div>
+      <div id="question2.2">
+        <p>¿Cuantas ceremomias de premios Oscar ha habido hasta 2024? </p>
+        <input type="radio" id="q2.2Choice1" name="question2" value="83" />
+        <label id="q2.2Choice1Txt" for="q2.2Choice1">83</label>
+        <br>
+        <input type="radio" id="q2.2Choice2" name="question2" value="96" />
+        <label id="q2.2Choice2Txt" for="q2.2Choice2">96</label>
+        <br>
+        <input type="radio" id="q2.2Choice3" name="question2" value="104" />
+        <label id="q2.2Choice3Txt" for="q2.2Choice3">104</label>
+        <br>
+        <input type="radio" id="q2.2Choice4" name="question2" value="98" />
+        <label id="q2.2Choice4Txt" for="q2.2Choice4">98</label>
+        <br>
+      </div>
+      <div id="question3.2">
+        <p>¿Quién cantó "My Heart Will Go On" en Titanic?</p>
+        <input type="radio" id="q3.2Choice1" name="question3" value="Lady Gaga" />
+        <label id="q3.2Choice1Txt" for="q3.2Choice1">Lady Gaga</label>
+        <br>
+        <input type="radio" id="q3.2Choice2" name="question3" value="Whitney Houston" />
+        <label id="q3.2Choice2Txt" for="q3.2Choice2">Whitney Houston</label>
+        <br>
+        <input type="radio" id="q3.2Choice3" name="question3" value="Mariah Carey" />
+        <label id="q3.2Choice3Txt" for="q3.2Choice3">Mariah Carey</label>
+        <br>
+        <input type="radio" id="q3.2Choice4" name="question3" value="Celine Dion" />
+        <label id="q3.2Choice4Txt" for="q3.2Choice4">Celine Dion</label>
         <br>
       </div>
       <div id="results"></div>
