feat: added trivia options

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
     <p id="welcomeMsg">
     </p>
   </div>
+  <div id="questions">
+    <button id="generalTriviaBtn">Cultura general</button>
+    <button id="moviesTriviaBtn">Cine</button>
+  </div>
   <div id="general">
     <form>
       <div id="question1">
