feat: show correct answers in movies

--- a/src/index.html
+++ b/src/index.html
@@ -79,56 +79,56 @@
   </div>
   <div id="movies">
     <form>
-      <div id="question1.2">
+      <div id="question4">
         <p>¿Cuál fue la primera directora en ganar un Oscar de la Academia?</p>
-        <input type="radio" id="q1.2Choice1" name="question1" value="Kathryn Bigelow" />
-        <label id="q1.2Choice1Txt" for="q1.2Choice1">Kathryn Bigelow</label>
+        <input type="radio" id="q4Choice1" name="question4" value="kathryn-bigelow" />
+        <label id="q4Choice1Txt" for="q4Choice1">Kathryn Bigelow</label>
         <br>
-        <input type="radio" id="q1.2Choice2" name="question1" value="Sophia Coppola" />
-        <label id="q1.2Choice2Txt" for="q1.2Choice2">Sophia Coppola</label>
+        <input type="radio" id="q4Choice2" name="question4" value="sophia-coppola" />
+        <label id="q4Choice2Txt" for="q4Choice2">Sophia Coppola</label>
         <br>
-        <input type="radio" id="q1.2Choice3" name="question1" value="Agnes Varda" />
-        <label id="q1.2Choice3Txt" for="q1.2Choice3">Agnes Varda</label>
+        <input type="radio" id="q4Choice3" name="question4" value="agnes-varda" />
+        <label id="q4Choice3Txt" for="q4Choice3">Agnes Varda</label>
         <br>
-        <input type="radio" id="q1.2Choice4" name="question1" value="Emerald Fennell" />
-        <label id="q1.2Choice4Txt" for="q1.2Choice4">Emerald Fennell</label>
+        <input type="radio" id="q4Choice4" name="question4" value="emerald-fennell" />
+        <label id="q4Choice4Txt" for="q4Choice4">Emerald Fennell</label>
         <br>
       </div>
-      <div id="question2.2">
+      <div id="question5">
         <p>¿Cuantas ceremomias de premios Oscar ha habido hasta 2024? </p>
-        <input type="radio" id="q2.2Choice1" name="question2" value="83" />
-        <label id="q2.2Choice1Txt" for="q2.2Choice1">83</label>
+        <input type="radio" id="q5Choice1" name="question5" value="83" />
+        <label id="q5Choice1Txt" for="q5Choice1">83</label>
         <br>
-        <input type="radio" id="q2.2Choice2" name="question2" value="96" />
-        <label id="q2.2Choice2Txt" for="q2.2Choice2">96</label>
+        <input type="radio" id="q5Choice2" name="question5" value="96" />
+        <label id="q5Choice2Txt" for="q5Choice2">96</label>
         <br>
-        <input type="radio" id="q2.2Choice3" name="question2" value="104" />
-        <label id="q2.2Choice3Txt" for="q2.2Choice3">104</label>
+        <input type="radio" id="q5Choice3" name="question5" value="104" />
+        <label id="q5Choice3Txt" for="q5Choice3">104</label>
         <br>
-        <input type="radio" id="q2.2Choice4" name="question2" value="98" />
-        <label id="q2.2Choice4Txt" for="q2.2Choice4">98</label>
+        <input type="radio" id="q5Choice4" name="question5" value="98" />
+        <label id="q5Choice4Txt" for="q5Choice4">98</label>
         <br>
       </div>
-      <div id="question3.2">
+      <div id="question6">
         <p>¿Quién cantó "My Heart Will Go On" en Titanic?</p>
-        <input type="radio" id="q3.2Choice1" name="question3" value="Lady Gaga" />
-        <label id="q3.2Choice1Txt" for="q3.2Choice1">Lady Gaga</label>
+        <input type="radio" id="q6Choice1" name="question6" value="lady-gaga" />
+        <label id="q6Choice1Txt" for="q6Choice1">Lady Gaga</label>
         <br>
-        <input type="radio" id="q3.2Choice2" name="question3" value="Whitney Houston" />
-        <label id="q3.2Choice2Txt" for="q3.2Choice2">Whitney Houston</label>
+        <input type="radio" id="q6Choice2" name="question6" value="whitney-houston" />
+        <label id="q6Choice2Txt" for="q6Choice2">Whitney Houston</label>
         <br>
-        <input type="radio" id="q3.2Choice3" name="question3" value="Mariah Carey" />
-        <label id="q3.2Choice3Txt" for="q3.2Choice3">Mariah Carey</label>
+        <input type="radio" id="q6Choice3" name="question6" value="mariah-carey" />
+        <label id="q6Choice3Txt" for="q6Choice3">Mariah Carey</label>
         <br>
-        <input type="radio" id="q3.2Choice4" name="question3" value="Celine Dion" />
-        <label id="q3.2Choice4Txt" for="q3.2Choice4">Celine Dion</label>
+        <input type="radio" id="q6Choice4" name="question6" value="Celine-dion" />
+        <label id="q6Choice4Txt" for="q6Choice4">Celine Dion</label>
         <br>
       </div>
-      <div id="results"></div>
+      <div id="resultsMovies"></div>
       <div>
-        <button id="verifyAnswersBtn">Verificar</button>
+        <button id="verifyMoviesBtn">Verificar</button>
       </div>
-      <button id="restartGameBtn">Reiniciar</button>
+      <button id="restartGameMoviesBtn">Reiniciar</button>
     </form>
   </div>
   <script src="main.js"></script>
