refactor: changed names

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
       </div>
       <div id="results"></div>
       <div>
-        <button id="verifyAnswersBtn">Verificar</button>
+        <button id="verifyGeneralBtn">Verificar</button>
       </div>
       <button id="restartGameBtn">Reiniciar</button>
     </form>
