feat:  saved name in local storage

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
         <label id="q3Choice4Txt"  for="q3Choice4">Pereira</label>
         <br>
       </div>
-      <div id="results"></div>
+      <div id="resultsGeneral"></div>
       <div>
         <button id="verifyGeneralBtn">Verificar</button>
       </div>
@@ -120,7 +120,7 @@
         <input type="radio" id="q6Choice3" name="question6" value="mariah-carey" />
         <label id="q6Choice3Txt" for="q6Choice3">Mariah Carey</label>
         <br>
-        <input type="radio" id="q6Choice4" name="question6" value="Celine-dion" />
+        <input type="radio" id="q6Choice4" name="question6" value="celine-dion" />
         <label id="q6Choice4Txt" for="q6Choice4">Celine Dion</label>
         <br>
       </div>
