--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
         <input type="radio" id="q3Choice2" name="question3" value="Cali" />
         <label id="q3Choice2Txt"  for="q3Choice2">Cali</label>
         <br>
-        <input type="radio" id="q3Choice3" name="question3" value="Bogota" />
+        <input type="radio" id="q3Choice3" name="question3" value="bogota" />
         <label id="q3Choice3Txt" for="q3Choice3">Bogotá</label>
         <br>
         <input type="radio" id="q3Choice4" name="question3" value="Pereira" />
