--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trivia cultura general</title>
+  <link rel="icon" type="image/x-icon" href="/img/pregunta.ico"/>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -131,6 +132,7 @@
       <button id="restartGameMoviesBtn">Reiniciar</button>
     </form>
   </div>
+  <footer><a href="https://www.flaticon.es/iconos-gratis/pregunta" title="pregunta iconos">Pregunta iconos creados por Anggara - Flaticon</a></footer>
   <script src="main.js"></script>
 </body>
 
