fix: favicon path

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trivia cultura general</title>
-  <link rel="icon" type="image/x-icon" href="/img/pregunta.ico"/>
+  <link rel="icon" type="image/x-icon" href="img/pregunta.ico"/>
   <link rel="stylesheet" href="style.css">
 </head>
 
