--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Common knoledge trivia">
   <title>Trivia cultura general</title>
   <link rel="icon" type="image/x-icon" href="img/pregunta.ico"/>
   <link rel="stylesheet" href="style.css">
@@ -13,7 +14,7 @@
   <h1>Trivia cultura general</h1>
   <div id="intro">
     <p>Ingrese su nombre</p>
-    <input id="name" type="text" />
+    <input id="name" type="text" placeholder="tu nombre"/>
     <button id="playGameBtn">Jugar</button>
   </div>
   <div id="welcome">
@@ -133,7 +134,7 @@
     </form>
   </div>
   <footer><a href="https://www.flaticon.es/iconos-gratis/pregunta" title="pregunta iconos">Pregunta iconos creados por Anggara - Flaticon</a></footer>
-  <script src="main.js"></script>
+  <script defer src="main.js"></script>
 </body>
 
 </html>
