--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,9 @@
       <button id="restartGameMoviesBtn">Reiniciar</button>
     </form>
   </div>
-  <footer><a href="https://www.flaticon.es/iconos-gratis/pregunta" title="pregunta iconos">Pregunta iconos creados por Anggara - Flaticon</a></footer>
+  <footer>
+    <p>Trivia - desarrollado por <a href="https://linkedin.com/in/valenlopezvega" target="_blank">Valentina López</a> - <a href="https://github.com/ValenLopezVega/trivia" target="_blank">Código fuente</a> </p>
+    <a href="https://www.flaticon.es/iconos-gratis/pregunta" title="pregunta iconos" target="_blank">Pregunta iconos creados por Anggara - Flaticon</a></footer>
   <script defer src="main.js"></script>
 </body>
 
