--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Common knoledge trivia">
+  <meta name="theme-color" content="#042940"/>
   <title>Trivia cultura general</title>
-  <link rel="icon" type="image/x-icon" href="img/pregunta.ico"/>
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico"/>
+  <link rel="apple-touch-icon" href="img/ios/192.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -137,6 +140,16 @@
     <p>Trivia - desarrollado por <a href="https://linkedin.com/in/valenlopezvega" target="_blank">Valentina López</a> - <a href="https://github.com/ValenLopezVega/trivia" target="_blank">Código fuente</a> </p>
     <a href="https://www.flaticon.es/iconos-gratis/pregunta" title="pregunta iconos" target="_blank">Pregunta iconos creados por Anggara - Flaticon</a></footer>
   <script defer src="main.js"></script>
+  <script defer type="text/javascript">
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", function() {
+        navigator.serviceWorker
+        .register("/serviceWorker.js")
+        .then(res => console.log("service worker registered"))
+        .catch(err => console.log("service worker not registered", err))
+      })
+    }
+  </script>
 </body>
 
 </html>
